opam-version: "1.2"
maintainer:   ["angelo@icorsaro.net" ]
authors:      "Angelo Corsaro"
homepage:     "https://github.com/atolab/ocaml-cdds-lwt"
bug-reports:  "https://github.com/atolab/ocaml-cdds-lwt/issues/"
dev-repo:     "https://github.com/atolab/ocaml-cdds-lwt.git"
tags:         ["org:cdds" "org:xapi-project"]

version:"0.1"
license: "EPL 2"

build: [
 ["jbuilder" "subst"] {pinned}
 ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "jbuilder"
  "cdds"
  "lwt" {<= "3.3.0"}
  "lwt.unix"
  "lwt.preemptive"
]

available: [ocaml-version >= "4.03.0"]
