opam-version: "1.2"
maintainer:   ["angelo@icorsaro.net" ]
authors:      "Angelo Corsaro"
homepage:     "https://github.com/atolab/ocaml-cdds-lwt"
bug-reports:  "https://github.com/atolab/ocaml-cdds-lwt/issues/"
dev-repo:     "https://github.com/atolab/ocaml-cdds-lwt.git"
tags:         ["org:cdds" "org:xapi-project"]

version:"0.1"
license: "EPL 2"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "-p" name "-j" jobs]
]

install: [
  ["dune" "build" "-p" name "@install"]
  ["dune" "install" name]
]

depends: [
  "dune"
  "cdds"
  "lwt"
  "lwt.unix"
  "ppx_lwt"
]

available: [ocaml-version >= "4.03.0"]
